# CAP-P2

./: CMakeLists.txt  LICENSE  README.md  autores.txt  zip.sh
data/: .gitignore  results.csv
report/: report.tex
report/parts/: compilacion.tex  conclusiones.tex  hibrido.tex  introduccion.tex  mpi.tex  openmp.tex  secuencial.tex
report/parts/hibrido/: graficas.tex  metodologia.tex
report/parts/mpi/: graficas.tex  metodologia.tex
report/parts/openmp/: graficas.tex  metodologia.tex
src/: hist-equ.h
src/mpi/: contrast-enhancement.cpp  contrast.cpp  hist-equ.h  histogram-equalization.cpp
src/mpi-omp/: contrast-enhancement.cpp  contrast.cpp  hist-equ.h  histogram-equalization.cpp
src/omp/: contrast-enhancement.cpp  contrast.cpp  histogram-equalization.cpp
src/serial/: contrast-enhancement.cpp  contrast.cpp
src/test/: input_example.txt  results.csv
src/test/chart/: generator.py
src/test/chart/MPI/: test_mpi_HSL.txt  test_mpi_YUV.txt  test_mpi_grey.txt
src/test/chart/OMP/: test_omp_HSL.txt  test_omp_YUV.txt  test_omp_grey.txt
src/test/chart/OMP+MPI/: test_omp+mpi_HSL.txt  test_omp+mpi_YUV.txt  test_omp+mpi_grey.txt
